playbooks/templates/iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT

-A INPUT -p icmp -j ACCEPT 
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT

# http
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# dns
-A INPUT -p tcp --dport 53 -j ACCEPT
-A INPUT -p udp --dport 53 -j ACCEPT

# kerberos
-A INPUT -p tcp --dport 88 -j ACCEPT
-A INPUT -p udp --dport 88 -j ACCEPT
-A INPUT -p udp --dport 123 -j ACCEPT

# rpc endpoint mapper
-A INPUT -p tcp --dport 135 -j ACCEPT

# netbios name service
-A INPUT -p udp --dport 137 -j ACCEPT
-A INPUT -p tcp --dport 137 -j ACCEPT

# netbios datagram service
-A INPUT -p udp --dport 138 -j ACCEPT

# netbios session service
-A INPUT -p tcp --dport 139 -j ACCEPT

# ldap
-A INPUT -p tcp --dport 389 -j ACCEPT
-A INPUT -p udp --dport 389 -j ACCEPT

# smb over tcp
-A INPUT -p tcp --dport 445 -j ACCEPT

# kerberos password change
-A INPUT -p tcp --dport 464 -j ACCEPT
-A INPUT -p udp --dport 464 -j ACCEPT

# ldap ssl
-A INPUT -p tcp --dport 636 -j ACCEPT

# global catalog
-A INPUT -p tcp --dport 3268 -j ACCEPT
-A INPUT -p tcp --dport 3269 -j ACCEPT

# dynamic rpc ports
-A INPUT -p tcp --dport 49152:65535 -j ACCEPT

# default drop all other incoming connections
-A INPUT -j DROP
COMMIT
